navbar fixing spacing

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,11 +1,23 @@
 .navbar {
    height: 5rem;
    width: 100vw;
+   max-width: 75rem;
    margin: 0 auto;
    padding: 1rem 2rem;
    display: flex;
-   justify-content: center;
+   justify-content: space-between;
    position: sticky;
    z-index: 3;
    top: 0;
+}
+
+.logo {
+   object-fit: cover;
+   height: 3rem;
+   width: 4rem;
+}
+
+.desktopMenuListItem{
+   margin: 1rem;
+   cursor: pointer;
 }
